--- a/index.html
+++ b/index.html
@@ -24,15 +24,9 @@
         <img hidden id="bricks" src="./images/bricks.png" alt="Sprite Bricks" />
       </div>
       <footer>
+        <div></div>
         <div>
-            Made with 💙💛💙 by&nbsp;<a href="https://insaurralde.vercel.app/" target="_blank" rel="noreferrer" ><span class="author" >DIEGO INSAURRALDE </span> 🐒</a>
-        </div>
-        <div>
-          <span>Based on a </span>
-          <a href="https://midu.dev" target="_blank" rel="noreferrer" >
-            <img alt="Logo de midudev" src="./images/midu-logo.png" width="92" height="28" loading="lazy">
-          </a>
-          <span> tutorial</span>
+          Made with <img class="heart" alt="heart" src="./images/boke-heart.png" > by&nbsp;<a href="https://insaurralde.vercel.app/" target="_blank" rel="noreferrer" ><span class="author">DIEGO INSAURRALDE </span><img class="chimp" alt="chimp" src="./images/boke-chimp.png" ></a>
         </div>
       </footer>
     </main>
